--- a/devel/py-pymtbl/Makefile
+++ b/devel/py-pymtbl/Makefile
@@ -1,4 +1,3 @@
-# $FreeBSD$
 
 PORTNAME=	pymtbl
 PORTVERSION=	0.5.0
@@ -27,7 +26,7 @@ CPPFLAGS+=	-I${LOCALBASE}/include
 OPTIONS_DEFINE=	EXAMPLES
 
 post-install:
-	${STRIP_CMD} ${STAGEDIR}/${PYTHON_SITELIBDIR}/mtbl.so
+	${STRIP_CMD} ${STAGEDIR}${PYTHONPREFIX_SITELIBDIR}/mtbl*.so
 	${MKDIR} ${STAGEDIR}${EXAMPLESDIR}
 	(cd ${WRKSRC}/examples && ${COPYTREE_SHARE} . ${STAGEDIR}${EXAMPLESDIR})
 
