--- a/graphics/cegui/Makefile
+++ b/graphics/cegui/Makefile
@@ -1,9 +1,8 @@
 # Created by: Oliver Lehmann <oliver@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	cegui
 PORTVERSION=	0.8.7
-PORTREVISION=	15
+PORTREVISION=	16
 CATEGORIES=	graphics devel
 MASTER_SITES=	SF/crayzedsgui/CEGUI%20Mk-2/0.8
 
@@ -110,6 +109,11 @@ CMAKE_ARGS+=		-DCEGUI_HAS_MINIZIP_RESOURCE_PROVIDER=OFF \
 CMAKE_ARGS+=		-DCEGUI_BUILD_PYTHON_MODULES=OFF # python support doesn't build
 
 .include <bsd.port.pre.mk>
+
+.if ${PORT_OPTIONS:MLUA}
+DEPRECATED=	Uses EOL Python 2.7 via lang/tolua++
+EXPIRATION_DATE=2021-06-23
+.endif
 
 .if ${PORT_OPTIONS:MEXPAT} || ${PORT_OPTIONS:MXERCES} || ${PORT_OPTIONS:MLIBXML2} || ${PORT_OPTIONS:MRAPIDXML} || ${PORT_OPTIONS:MTINYXML}
 PLIST_SUB+=	XMLPARSERS=""
