Update net/kea to version 1.8.2_1

--- a/net/kea/files/kea.in
+++ b/net/kea/files/kea.in
@@ -1,8 +1,7 @@
 #!/bin/sh
-# $FreeBSD$
-#
+
 # PROVIDE: kea
-# REQUIRE: NETWORK netif routing
+# REQUIRE: NETWORK netif routing %%REQ_MYSQL%% %%REQ_PGSQL%%
 # KEYWORD: shutdown
 
 #
