Tweak lang/oo2c version 2.1.11_13

--- a/lang/oo2c/Makefile
+++ b/lang/oo2c/Makefile
@@ -1,5 +1,4 @@
 # Created by: Oliver Breuninger <ob@seicom.NET>
-# $FreeBSD$
 
 PORTNAME=	oo2c
 PORTVERSION=	2.1.11
@@ -45,10 +44,8 @@ BITS=		32
 BITS=		64
 .endif
 
-.if ${ARCH} == "powerpc64"
-# .if defined(PPC_ABI) && ${PPC_ABI} == ELFv1
+.if defined(PPC_ABI) && ${PPC_ABI} == ELFv1
 CFLAGS+=	-fnested-functions
-# .endif
 .endif
 
 .include <bsd.port.post.mk>
