--- a/devel/grpc134/Makefile
+++ b/devel/grpc134/Makefile
@@ -1,8 +1,8 @@
 # Created by: vanilla@
-# $FreeBSD$
 
 PORTNAME=	grpc
 PORTVERSION=	1.34.0
+PORTREVISION=	1
 DISTVERSIONPREFIX=	v
 CATEGORIES=	devel
 PKGNAMESUFFIX=	134
