--- a/security/rubygem-omniauth-multipassword/Makefile
+++ b/security/rubygem-omniauth-multipassword/Makefile
@@ -1,4 +1,3 @@
-# $FreeBSD$
 
 PORTNAME=	omniauth-multipassword
 PORTVERSION=	0.4.2
@@ -6,7 +5,7 @@ CATEGORIES=	security rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	sunpoet@FreeBSD.org
-COMMENT=	OmniAuth strategy using different passwort strategies
+COMMENT=	OmniAuth strategy using different password strategies
 
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
