--- a/devel/rubygem-ffi/Makefile
+++ b/devel/rubygem-ffi/Makefile
@@ -1,5 +1,4 @@
 # Created by: Christoph Kick
-# $FreeBSD$
 
 PORTNAME=	ffi
 PORTVERSION=	1.14.2
@@ -7,7 +6,7 @@ CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	sunpoet@FreeBSD.org
-COMMENT=	Extension for dynamic libraries & binding functions
+COMMENT=	Extension for dynamic libraries and binding functions
 
 LICENSE=	BSD3CLAUSE
 LICENSE_FILE=	${WRKSRC}/LICENSE
