--- a/editors/semi/Makefile
+++ b/editors/semi/Makefile
@@ -1,8 +1,8 @@
 # Created by: Shigeyuki FUKUSHIMA <shige@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	semi
 PORTVERSION=	${SEMI_VER}.${SNAPDATE}
+PORTREVISION=	1
 CATEGORIES=	editors elisp
 PKGNAMESUFFIX=	${EMACS_PKGNAMESUFFIX}
 
@@ -17,9 +17,9 @@ RUN_DEPENDS=	flim${EMACS_PKGNAMESUFFIX}>0:editors/flim@${EMACS_FLAVOR}
 USES=		emacs iconv makeinfo
 USE_GITHUB=	yes
 GH_ACCOUNT=	wanderlust
-GH_TAGNAME=	f279ebe
+GH_TAGNAME=	20d7530
 
-SNAPDATE=	20201115
+SNAPDATE=	20210214
 NO_ARCH=	yes
 
 FLIM_TRUNK=	1.14
