--- a/benchmarks/himenobench/Makefile
+++ b/benchmarks/himenobench/Makefile
@@ -1,5 +1,4 @@
 # Created by: NAKATA Maho <maho@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	himenobench
 PORTVERSION=	2015.07.09
@@ -14,7 +13,7 @@ DISTFILES=	himenobmtxp_xl.zip himenobmtxp_l.zip \
 DIST_SUBDIR=	himeno
 
 MAINTAINER=	ports@FreeBSD.org
-COMMENT=	Tool for measureing performance of floating point operation
+COMMENT=	Tool for measuring performance of floating point operations
 
 LICENSE=	LGPL20 # (or later)
 
