--- a/graphics/g2/Makefile
+++ b/graphics/g2/Makefile
@@ -1,11 +1,9 @@
 # Created by: Bill Fumerola <billf@chc-chimes.com>
-# $FreeBSD$
 
 PORTNAME=	g2
-PORTVERSION=	0.40
-PORTREVISION=	11
+PORTVERSION=	0.72
 CATEGORIES=	graphics
-MASTER_SITES=	SUNSITE/libs/graphics
+MASTER_SITES=	SF/g2gl/${PORTNAME}/${PORTNAME}-${PORTVERSION}
 
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Easy to use, portable, and powerful 2D graphics library
