--- a/graphics/openjph/Makefile
+++ b/graphics/openjph/Makefile
@@ -1,5 +1,4 @@
 # Created by: Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	openjph
 PORTVERSION=	0.7.2
@@ -11,6 +10,9 @@ COMMENT=	Open-source implementation of JPEG2000 Part-15
 
 LICENSE=	BSD2CLAUSE
 LICENSE_FILE=	${WRKSRC}/license.txt
+
+NOT_FOR_ARCHS=	i386
+NOT_FOR_ARCHS_REASON=	is currently 64-bit only
 
 USES=		cmake compiler:c++11-lang pathfix
 
