--- a/www/trac-devel/Makefile
+++ b/www/trac-devel/Makefile
@@ -1,4 +1,3 @@
-# $FreeBSD$
 
 PORTNAME=	trac
 DISTVERSION=	1.5.2
@@ -21,7 +20,7 @@ RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}Babel>=2.3.4:devel/py-babel@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}Jinja2>=2.10:devel/py-Jinja2@${PY_FLAVOR}
 
 # some tests are failing with 3.8
-USES=		python:3.7
+USES=		python:3.7+
 
 CONFLICTS_INSTALL=	trac
 
