Tweak deskutils/gnome-calendar version 3.38.2

--- a/deskutils/gnome-calendar/Makefile
+++ b/deskutils/gnome-calendar/Makefile
@@ -1,5 +1,4 @@
 # Created by: Koop Mast <kwm@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	gnome-calendar
 PORTVERSION=	3.38.2
@@ -8,7 +7,7 @@ MASTER_SITES=	GNOME
 DIST_SUBDIR=	gnome
 
 MAINTAINER=	gnome@FreeBSD.org
-COMMENT=	Simple and beatiful calendar application for GNOME
+COMMENT=	Simple and beautiful calendar application for GNOME
 
 LICENSE=	GPLv3
 LICENSE_FILE=	${WRKSRC}/COPYING
