--- a/x11/radare-cutter/Makefile
+++ b/x11/radare-cutter/Makefile
@@ -1,4 +1,3 @@
-# $FreeBSD$
 
 PORTNAME=	radare-cutter
 PORTVERSION=	0.1.1
@@ -10,6 +9,9 @@ COMMENT=	GUI for radare2 reverse engineering framework
 
 LICENSE=	GPLv3
 LICENSE_FILE=	${WRKSRC}/../COPYING
+
+DEPRECATED=	Uses EOL Python 2.7 via www/qt5-webengine
+EXPIRATION_DATE=2021-06-23
 
 LIB_DEPENDS=	libcapstone.so:devel/capstone4 \
 		libr_bin.so:devel/radare2
