Update math/R-cran-pbkrtest to version 0.5.1

--- a/math/R-cran-pbkrtest/Makefile
+++ b/math/R-cran-pbkrtest/Makefile
@@ -1,8 +1,7 @@
 # Created by: TAKATSU Tomonari <tota@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	pbkrtest
-DISTVERSION=	0.5-0.1
+DISTVERSION=	0.5.1
 CATEGORIES=	math
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
