--- a/astro/qmapshack/Makefile
+++ b/astro/qmapshack/Makefile
@@ -1,8 +1,8 @@
 # Created by: Muhammad Moinur Rahman <bofh@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	qmapshack
 PORTVERSION=	1.15.2
+PORTREVISION=	1
 DISTVERSIONPREFIX=	V_
 CATEGORIES=	astro
 
@@ -11,6 +11,9 @@ COMMENT=	Ultimate outdoor aficionado's tool
 
 LICENSE=	GPLv3+
 LICENSE_FILE=	${WRKSRC}/LICENSE
+
+DEPRECATED=	Uses EOL Python 2.7 via www/qt5-webengine
+EXPIRATION_DATE=2021-06-23
 
 BROKEN_FreeBSD_11=	Requires OpenSSL 1.1.0+
 
