Update graphics/mapserver to version 7.6.2_1

--- a/graphics/mapserver/Makefile
+++ b/graphics/mapserver/Makefile
@@ -1,8 +1,8 @@
 # Created by: Douglas K. Rand <rand@meridian-enviro.com>
-# $FreeBSD$
 
 PORTNAME=		mapserver
 PORTVERSION=		7.6.2
+PORTREVISION=	1
 CATEGORIES=		graphics www geography
 MASTER_SITES=		https://download.osgeo.org/mapserver/
 
