--- a/cad/cura/Makefile
+++ b/cad/cura/Makefile
@@ -1,8 +1,7 @@
-# $FreeBSD$
 
 PORTNAME=	Cura
 DISTVERSION=	4.8.0
-PORTREVISION=	4
+PORTREVISION=	7
 PORTEPOCH=	2
 CATEGORIES=	cad
 DIST_SUBDIR=	Ultimaker
@@ -21,6 +20,7 @@ RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}zeroconf>0:net/py-zeroconf@${PY_FLAVOR} \
 		qt5-graphicaleffects>0:graphics/qt5-graphicaleffects \
 		qt5-quickcontrols>0:x11-toolkits/qt5-quickcontrols \
 		qt5-quickcontrols2>0:x11-toolkits/qt5-quickcontrols2 \
+		${PYTHON_PKGNAMEPREFIX}qt5-svg>0:graphics/py-qt5-svg \
 		Uranium>=${DISTVERSION}:cad/uranium \
 		libCharon>=${DISTVERSION}:net/libcharon \
 		CuraEngine>=${DISTVERSION}:cad/cura-engine \
