Update graphics/py-visvis to version 1.13.0_2

--- a/graphics/py-visvis/Makefile
+++ b/graphics/py-visvis/Makefile
@@ -1,8 +1,8 @@
 # Created by: Rainer Hurling <rhurlin@gwdg.de>
-# $FreeBSD$
 
 PORTNAME=	visvis
 PORTVERSION=	1.13.0
+PORTREVISION=	2
 CATEGORIES=	graphics python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
