--- a/math/dune-curvedgeometry/Makefile
+++ b/math/dune-curvedgeometry/Makefile
@@ -1,11 +1,10 @@
-# $FreeBSD$
 
 PORTNAME=	dune-curvedgeometry
 DISTVERSION=	g20201116
 CATEGORIES=	math
 
 MAINTAINER=	yuri@FreeBSD.org
-COMMENT=	DUNE framework: curved dune geometries by lagrange parametrization
+COMMENT=	DUNE framework: curved dune geometries by Lagrange parameterization
 
 LICENSE=	GPLv2
 
