--- a/graphics/rubygem-goocanvas/Makefile
+++ b/graphics/rubygem-goocanvas/Makefile
@@ -1,4 +1,3 @@
-# $FreeBSD$
 
 PORTNAME=	goocanvas
 PORTVERSION=	2.2.0
@@ -7,7 +6,7 @@ CATEGORIES=	graphics rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	ruby@FreeBSD.org
-COMMENT=	Ruby/GooCanvas is a Ruby binding of GooCanvas
+COMMENT=	Ruby binding to GooCanvas
 
 LICENSE=	LGPL21+
 
