--- a/www/emacs-w3m/Makefile
+++ b/www/emacs-w3m/Makefile
@@ -1,8 +1,8 @@
 # Created by: MANTANI Nobutaka <nobutaka@nobutaka.com>
-# $FreeBSD$
 
 PORTNAME=	emacs-w3m
 PORTVERSION=	1.4.632.b.${SNAPDATE}
+PORTREVISION=	1
 CATEGORIES=	www elisp
 PKGNAMESUFFIX=	${EMACS_PKGNAMESUFFIX}
 
