Update graphics/rapid-photo-downloader to version 0.9.26_2

--- a/graphics/rapid-photo-downloader/Makefile
+++ b/graphics/rapid-photo-downloader/Makefile
@@ -1,7 +1,7 @@
-# $FreeBSD$
 
 PORTNAME=	rapid-photo-downloader
 DISTVERSION=	0.9.26
+PORTREVISION=	2
 CATEGORIES=	graphics
 MASTER_SITES=	https://launchpad.net/rapid/pyqt/${PORTVERSION}/+download/
 
