--- a/www/py-qt5-webengine/Makefile
+++ b/www/py-qt5-webengine/Makefile
@@ -1,8 +1,6 @@
-# $FreeBSD$
 
 PORTNAME=	webengine
 DISTVERSION=	${PYQT_VERSION}
-PORTREVISION=	1
 CATEGORIES=	www devel python
 MASTER_SITES=	https://pypi.python.org/packages/source/P/PyQtWebEngine/
 PKGNAMEPREFIX=	${PYQT_PY_RELNAME}-
@@ -12,6 +10,9 @@ MAINTAINER=	kde@FreeBSD.org
 COMMENT=	Python bindings for the Qt5 toolkit, QtWebEngine module
 
 LICENSE=	GPLv3
+
+DEPRECATED=	Uses EOL Python 2.7 via www/qt5-webengine
+EXPIRATION_DATE=2021-06-23
 
 USES=		gl python:3.5+ pyqt:5 qt:5
 USE_GL=		gl
