Tweak ports-mgmt/porttree version 1.1.r114_1

--- a/ports-mgmt/porttree/Makefile
+++ b/ports-mgmt/porttree/Makefile
@@ -1,5 +1,4 @@
 # Created by: Vladimir Chukharev
-# $FreeBSD$
 
 PORTNAME=	porttree
 PORTVERSION=	1.1.r${SVN_REV}
@@ -8,7 +7,7 @@ CATEGORIES=	ports-mgmt python
 MASTER_SITES=	SF/${PORTNAME}
 
 MAINTAINER=	Vladimir.Chukharev@gmail.com
-COMMENT=	Show dependences of FreeBSD port as pseudo graphical tree
+COMMENT=	Show dependencies of FreeBSD port as pseudo graphical tree
 
 LICENSE=	MIT
 
