--- a/multimedia/kodi/Makefile
+++ b/multimedia/kodi/Makefile
@@ -1,7 +1,7 @@
-# $FreeBSD$
 
 PORTNAME=	kodi
 DISTVERSION=	19.0
+DISTVERSIONSUFFIX=	-${KODI_CODENAME}
 CATEGORIES=	multimedia java
 
 MAINTAINER=	yzrh@noema.org
@@ -50,7 +50,6 @@ KODI_CODENAME=	Matrix
 USE_GITHUB=	yes
 GH_ACCOUNT=	xbmc
 GH_PROJECT=	xbmc
-GH_TAGNAME=	${DISTVERSION}-${KODI_CODENAME}
 
 KODI_ARCH_aarch64=	aarch64
 KODI_ARCH_x86_64=	x86_64
