--- a/games/solarus-quest-editor/Makefile
+++ b/games/solarus-quest-editor/Makefile
@@ -1,9 +1,9 @@
 # Created by: Danilo Egea Gondolfo <danilo@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	solarus-quest-editor
 PORTVERSION=	1.6.4
 DISTVERSIONPREFIX=	v
+PORTREVISION=	1
 CATEGORIES=	games
 
 MAINTAINER=	danilo@FreeBSD.org
