--- a/www/py-weboob-qt/Makefile
+++ b/www/py-weboob-qt/Makefile
@@ -1,7 +1,7 @@
-# $FreeBSD$
 
 PORTNAME=	weboob-qt
 PORTVERSION=	2.0
+PORTREVISION=	2
 CATEGORIES=	www python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
