--- a/sysutils/xfce4-systemload-plugin/Makefile
+++ b/sysutils/xfce4-systemload-plugin/Makefile
@@ -1,9 +1,7 @@
 # Created by: Thorsten Greiner <thorsten.greiner@web.de>
-# $FreeBSD$
 
 PORTNAME=	xfce4-systemload-plugin
-PORTVERSION=	1.2.4
-PORTREVISION=	1
+PORTVERSION=	1.3.1
 CATEGORIES=	sysutils xfce
 MASTER_SITES=	XFCE/panel-plugins
 DIST_SUBDIR=	xfce4
@@ -20,13 +18,19 @@ USE_XFCE=	panel
 
 SSP_UNSAFE=	yes
 GNU_CONFIGURE=	yes
+CONFIGURE_ARGS=	--disable-libgtop
 INSTALL_TARGET=	install-strip
 
-OPTIONS_DEFINE=		NLS UPOWER
+OPTIONS_DEFINE=		NLS UPOWER # LIBGTOP
 OPTIONS_DEFAULT=	UPOWER
 OPTIONS_SUB=		yes
 
+# Enabling libgtop causes crashes, needs investigation
+#LIBGTOP_DESC=		Use libgtop for network utilization monitoring
 UPOWER_DESC=		Use upower for adapting update interval to power state
+
+#LIBGTOP_CONFIGURE_ENABLE=	libgtop
+#LIBGTOP_LIB_DEPENDS=	libgtop-2.0.so:devel/libgtop
 
 NLS_CONFIGURE_ENABLE=	nls
 NLS_USES=		gettext-runtime
