--- a/science/gnudatalanguage/Makefile
+++ b/science/gnudatalanguage/Makefile
@@ -1,5 +1,4 @@
 # Created by: thierry@pompo.net
-# $FreeBSD$
 
 PORTNAME=	gnudatalanguage
 PORTVERSION=	1.0.0
@@ -12,7 +11,7 @@ PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 .endif
 
 MAINTAINER=	thierry@FreeBSD.org
-COMMENT?=	GDL, a free IDL compatible incremental compiler
+COMMENT?=	Free IDL-compatible incremental compiler
 
 LICENSE=	GPLv2
 
