Tweak audio/musescore version 3.6.1

--- a/audio/musescore/Makefile
+++ b/audio/musescore/Makefile
@@ -1,5 +1,4 @@
 # Created by: Dmitry Marakasov <amdmi3@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	musescore
 DISTVERSIONPREFIX=	v
@@ -66,6 +65,11 @@ WEBENGINE_CMAKE_BOOL=	BUILD_WEBENGINE
 
 .if ${CHOSEN_COMPILER_TYPE} == clang
 CXXFLAGS+=	-Wno-inconsistent-missing-override
+.endif
+
+.if ${PORT_OPTIONS:MWEBENGINE}
+DEPRECATED=	Uses EOL Python 2.7 via www/qt5-webengine
+EXPIRATION_DATE=2021-06-23
 .endif
 
 .include <bsd.port.post.mk>
