--- a/dns/bind9-devel/files/BIND.chroot.local.dist
+++ b/dns/bind9-devel/files/BIND.chroot.local.dist
@@ -1,5 +1,3 @@
-# $FreeBSD$
-#
 # mtree -deU -f files/BIND.etc.dist -p tmp
 # mtree -cjnb -k uname,gname,mode -p tmp
 
@@ -10,9 +8,9 @@
         namedb          type=dir uname=root
             dynamic         type=dir
             ..
-            master          type=dir uname=root
+            primary         type=dir uname=root
             ..
-            slave           type=dir
+            secondary       type=dir
             ..
             working         type=dir
             ..
