--- a/devel/nexus2-oss/Makefile
+++ b/devel/nexus2-oss/Makefile
@@ -1,4 +1,3 @@
-# $FreeBSD$
 
 PORTNAME=	nexus2
 PORTVERSION=	2.14.18
@@ -9,7 +8,7 @@ PKGNAMESUFFIX=	-oss
 DISTNAME=	nexus-${PORTVERSION}-${DISTVERSIONSUFFIX}-bundle
 
 MAINTAINER=	michael.osipov@siemens.com
-COMMENT=	Maven (and others) artifacts repostory manager
+COMMENT=	Maven (and others) artifacts repository manager
 
 LICENSE=	EPL
 
