--- a/deskutils/treeline/Makefile
+++ b/deskutils/treeline/Makefile
@@ -1,8 +1,8 @@
 # Created by: Tobias Roth <ports@fsck.ch>
-# $FreeBSD$
 
 PORTNAME=	treeline
 PORTVERSION=	3.1.4
+PORTREVISION=	2
 CATEGORIES=	deskutils python
 MASTER_SITES=	https://github.com/doug-101/TreeLine/releases/download/v${PORTVERSION}/ \
 		SF/${PORTNAME}/${PORTVERSION}
