--- a/cad/kicad-devel/Makefile
+++ b/cad/kicad-devel/Makefile
@@ -1,9 +1,8 @@
 # Created by: Michael Reifenberger <mr@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	kicad
 DISTVERSION=	r${GIT_SRC_DATE}
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	cad
 PKGNAMESUFFIX=	-devel
 DIST_SUBDIR=		${PORTNAME}
@@ -26,10 +25,9 @@ LIB_DEPENDS=	libboost_thread.so:devel/boost-libs \
 CONFLICTS=	kicad-4.*
 
 USE_GITLAB=	yes
-GL_ACCOUNT=	kicad
-GL_PROJECT=	code/kicad
+GL_ACCOUNT=	kicad/code
+GL_PROJECT=	kicad
 GL_COMMIT=	${GIT_SRC_HASH}
-WRKSRC=		${WRKDIR}/${PORTNAME}-${GL_COMMIT}-${GL_COMMIT}
 
 CXXFLAGS+=	--std=c++14 -I${WRKSRC} -I${WRKSRC}/include -I${LOCALBASE}/include
 USE_GL=		gl glew glu glut
