--- a/cad/horizon-eda/Makefile
+++ b/cad/horizon-eda/Makefile
@@ -1,8 +1,8 @@
-# $FreeBSD$
 
 PORTNAME=	horizon-eda
 DISTVERSIONPREFIX=	v
 DISTVERSION=	1.4.0
+PORTREVISION=	2
 CATEGORIES=	cad
 
 MAINTAINER=	yuri@FreeBSD.org
