--- a/graphics/qgis-ltr/Makefile
+++ b/graphics/qgis-ltr/Makefile
@@ -1,10 +1,9 @@
 # Created by: Laurent Courty
-# $FreeBSD$
 
 PORTNAME=	qgis
 DISTVERSIONPREFIX=	final-
 DISTVERSION=	3_10_14
-PORTREVISION=	1
+PORTREVISION=	4
 CATEGORIES=	graphics geography
 PKGNAMESUFFIX=	-ltr
 
@@ -18,6 +17,9 @@ COMMENT=	Free and Open Source Geographic Information System
 
 LICENSE=	GPLv2
 LICENSE_FILE=	${WRKSRC}/doc/LICENSE
+
+DEPRECATED=	Uses EOL Python 2.7 via www/qt5-webengine
+EXPIRATION_DATE=2021-06-23
 
 BUILD_DEPENDS=	gpsbabel>=1.5.4:astro/gpsbabel \
 		opencl>=0:devel/opencl \
@@ -137,8 +139,6 @@ CMAKE_OFF+=	SUPPRESS_QT_WARNINGS
 .endif
 
 CONFLICTS_INSTALL=	qgis
-
-SUB_FILES=	pkg-message
 
 PLIST_SUB=	DISTVERSION=${PORTVERSION}
 
