Tweak graphics/py-pyx version 0.15

--- a/graphics/py-pyx/Makefile
+++ b/graphics/py-pyx/Makefile
@@ -1,5 +1,4 @@
 # Created by: Ying-Chieh Liao <ijliao@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	pyx
 PORTVERSION=	0.15
@@ -12,9 +11,10 @@ MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Python package for creating encapsulated PostScript figures
 
 LICENSE=	GPLv2
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		python:3.4+
-USE_PYTHON=	autoplist distutils
+USE_PYTHON=	autoplist concurrent distutils
 USE_TEX=	latex:build
 
 OPTIONS_DEFINE=	KPATHSEA T1CODE
