--- a/net/py-pynmsg/Makefile
+++ b/net/py-pynmsg/Makefile
@@ -1,4 +1,3 @@
-# $FreeBSD$
 
 PORTNAME=	pynmsg
 PORTVERSION=	0.5.0
@@ -26,7 +25,7 @@ CPPFLAGS+=	-I${LOCALBASE}/include
 OPTIONS_DEFINE=	EXAMPLES
 
 post-install:
-	${STRIP_CMD} ${STAGEDIR}${PYTHON_SITELIBDIR}/_nmsg.so
+	${STRIP_CMD} ${STAGEDIR}${PYTHONPREFIX_SITELIBDIR}/_nmsg*.so
 	${MKDIR} ${STAGEDIR}${EXAMPLESDIR}
 	(cd ${WRKSRC}/examples && ${COPYTREE_SHARE} . ${STAGEDIR}${EXAMPLESDIR})
 
