--- a/games/hedgewars/Makefile
+++ b/games/hedgewars/Makefile
@@ -1,5 +1,4 @@
 # Created by: Dmitry Marakasov <amdmi3@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	hedgewars
 PORTVERSION=	1.0.0
@@ -14,6 +13,8 @@ COMMENT=	Free Worms-like turn based strategy game
 
 LICENSE=	GPLv2 GFDL
 LICENSE_COMB=	multi
+
+BROKEN_i386=	ld: error: duplicate symbol: LandDirty_dimension_info
 
 LIB_DEPENDS=	libphysfs.so:devel/physfs \
 		libpng.so:graphics/png
