--- a/comms/nanovna-saver/Makefile
+++ b/comms/nanovna-saver/Makefile
@@ -1,8 +1,8 @@
-# $FreeBSD$
 
 PORTNAME=	nanovna-saver
 DISTVERSIONPREFIX=	v
 DISTVERSION=	0.3.8
+PORTREVISION=	2
 CATEGORIES=	comms hamradio
 
 MAINTAINER=	hamradio@FreeBSD.org
