--- a/sysutils/angrysearch/Makefile
+++ b/sysutils/angrysearch/Makefile
@@ -1,9 +1,8 @@
 # Created by: Alexey Dokuchaev <danfe@FreeBSD.org>
-# $FreeBSD$
 
 PORTNAME=	angrysearch
 PORTVERSION=	1.0.2 # untagged, but specified in the setup.py
-PORTREVISION=	3
+PORTREVISION=	5
 CATEGORIES=	sysutils python
 
 MAINTAINER=	danfe@FreeBSD.org
@@ -12,7 +11,7 @@ COMMENT=	Quick search GUI tool for Unix-like systems
 LICENSE=	GPLv2
 
 RUN_DEPENDS=	xdg-open:devel/xdg-utils \
-		${PYTHON_LIBDIR}/lib-dynload/_sqlite3.so:databases/py-sqlite3@${PY_FLAVOR}
+		${PYTHON_PKGNAMEPREFIX}sqlite3>0:databases/py-sqlite3@${PY_FLAVOR}
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	DoTheEvo
